<resources>
    <string name="app_name">Accounting App</string>
    <string name="default_notification_channel_id">accounting_app_channel</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_main">Main</string>
    <string name="trophy_preview">Trophy Preview</string>
    <string name="trophy_name">Trophy Name</string>
    <string name="trophy_description">Trophy Description</string>
    <string name="trophy_image_url">Trophy Image URL</string>
    <string name="points_required">Points Required</string>
</resources>
